--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -44,7 +44,6 @@
                 android:contentDescription="@string/profile"
                 android:src="@drawable/contact" />
         </RelativeLayout>
-
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,8 +66,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
                 app:cardElevation="6dp">
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -160,8 +157,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
                         android:text="@string/chat"
-                        android:textSize="18sp"
-                        android:textColor="#6f6f6f" />
+                        android:textColor="#6f6f6f"
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
@@ -358,7 +355,6 @@
 
 
         </GridLayout>
-
     </LinearLayout>
 
 </ScrollView>
