--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -37,6 +37,19 @@
                 android:textColor="#ffff"
                 android:textSize="15sp" />
 
+            <TextView
+                android:id="@+id/logout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtUsername"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="7dp"
+                android:layout_toEndOf="@+id/txtField"
+                android:text="Logout"
+                android:textColor="#ffff"
+                android:onClick="logout"
+                android:textSize="15sp" />
+
             <ImageView
                 android:layout_width="62dp"
                 android:layout_height="62dp"
