--- a/app/src/main/res/layout/activity_userlogin.xml
+++ b/app/src/main/res/layout/activity_userlogin.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="100dp"
+    android:layout_marginBottom="100dp"
     android:orientation="vertical"
     android:padding="30dp"
-    android:layout_marginTop="100dp"
     tools:context=".userLogin">
-
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="@string/enter_email"
+            android:hint="@string/enter_roll_no"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
             android:textSize="20sp" />
@@ -46,15 +46,14 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_round"
         android:layout_marginTop="10dp"
-        android:text="Login"
+        android:background="@drawable/btn_round"
         android:onClick="isUser"
+        android:text="@string/login"
         android:textColor="#ffff"
         android:textSize="22sp" />
 
