--- a/app/src/main/res/layout/activity_dash_notes_upload.xml
+++ b/app/src/main/res/layout/activity_dash_notes_upload.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view_notes">
+    tools:context=".dash_notes_upload">
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -85,30 +84,7 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-    <ListView
-        android:id="@+id/listView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/fab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:drawableStart="@drawable/ic_folder_black_24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
-        app:layout_constraintVertical_bias="0.588" />
 
-    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="@string/upload"
-        app:icon="@android:drawable/ic_menu_add"
-        app:iconPadding="0dp"
-        app:iconSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-    />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
